# cookiecutter-poetry-pypackage

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  Makefile  README.md  cookiecutter.json  docker-entrypoint.sh  pyproject.toml  tox.ini
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: bug_report.md  new_feature.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  .secrets_template  AUTHORS.md  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.gitlab/: CODEOWNERS
{{cookiecutter.project_slug}}/.gitlab/issue_templates/: new_feature.md
{{cookiecutter.project_slug}}/.gitlab/merge_request_templates/: new_feature.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
