[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
license = "Copyright 2022, Symbotic, LLC. All rights reserved."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
# basic code formatting
pre-commit = "^2.13.0"
pre-commit-hooks = "^4.0.1"
black = "^21.5b1"
isort = "^5.8.0"
# testing
pytest = "^6.2.4"
pytest-clarity = "^1.0.1"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
tox = "^3.24.4"
# linting
flake8 = "^3.9.2"
# docstring linting
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
darglint = "^1.8.0"
# test linting
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.5.0"
cookiecutter = "^1.7.2"
# versioning
bump2version = "^1.0.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --doctest-modules --cov=bothealthmonitor --cov-report=term-missing  --cov-report=html:test/htmlcov"
testpaths = [
    "{{ cookiecutter.project_slug }}",
    "test",
]
